[gd_scene load_steps=6 format=3 uid="uid://c88nr8k6p5c1i"]

[ext_resource type="Script" path="res://component/timer_simple_view_timer_label.gd" id="1_51sp0"]
[ext_resource type="Texture2D" uid="uid://cvhunxq81rkck" path="res://asset/img/button-arrow-up-minimal.png" id="2_3ngxf"]
[ext_resource type="Texture2D" uid="uid://cnt5mp3l6lbf1" path="res://asset/img/button-arrow-up-minimal-pressed.png" id="3_cceqo"]
[ext_resource type="Texture2D" uid="uid://cofrn1nr0cvfb" path="res://asset/img/button-arrow-down-minimal.png" id="4_3jo7w"]
[ext_resource type="Texture2D" uid="uid://blwxnbbngtayg" path="res://asset/img/button-arrow-down-minimal-pressed.png" id="5_6pk8v"]

[node name="TimeLabel" type="HBoxContainer"]
alignment = 1
script = ExtResource("1_51sp0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="MinsIncButton" type="TextureButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("2_3ngxf")
texture_pressed = ExtResource("3_cceqo")
stretch_mode = 5

[node name="MinsLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 340
text = "10"
horizontal_alignment = 1

[node name="MinsDecButton" type="TextureButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("4_3jo7w")
texture_pressed = ExtResource("5_6pk8v")
stretch_mode = 5

[node name="ColonLabel" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 340
text = ":"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="SecondsIncButton2" type="TextureButton" parent="VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("2_3ngxf")
texture_pressed = ExtResource("3_cceqo")
stretch_mode = 5

[node name="SecondsLabel" type="Label" parent="VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 340
text = "05"
horizontal_alignment = 1

[node name="SecondsDecButton2" type="TextureButton" parent="VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("4_3jo7w")
texture_pressed = ExtResource("5_6pk8v")
stretch_mode = 5

[connection signal="pressed" from="VBoxContainer/MinsIncButton" to="." method="_on_mins_inc_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MinsDecButton" to="." method="_on_mins_dec_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/SecondsIncButton2" to="." method="_on_seconds_inc_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer2/SecondsDecButton2" to="." method="_on_seconds_dec_button_2_pressed"]
